# lumina-GEO

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
api/routes/: audit.py
lumina_geo/: __init__.py  config.py
lumina_geo/analysis/: answer_first.py  authority.py  base.py  grounding.py  robots_check.py  semantic_hierarchy.py
lumina_geo/ingestion/: repo_loader.py  url_scraper.py
lumina_geo/llm/: gemini_client.py
lumina_geo/reporting/: models.py  writer.py
static/: index.html
tests/: test_api.py  test_cli.py
tests/analysis/: test_answer_first.py  test_grounding.py  test_semantic_hierarchy.py
tests/fixtures/: sample.html  sample.md
tests/ingestion/: test_repo_loader.py  test_url_scraper.py
tests/reporting/: test_writer.py
